--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "solana_bonbot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js" ,
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.js"
   },
@@ -20,6 +20,8 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@moralisweb3/common-evm-utils": "^2.25.2",
+    "@mysten/sui": "^1.19.0",
+    "@mysten/sui.js": "^0.54.1",
     "@project-serum/serum": "^0.13.65",
     "@raydium-io/raydium-sdk": "^1.3.1-beta.50",
     "@solana/spl-token": "^0.4.1",
@@ -29,10 +31,12 @@
     "buffer-layout": "^1.2.2",
     "coin-ticker": "^3.2.0",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.5",
     "firebase-admin": "^12.0.0",
     "moralis": "^2.25.2",
     "node-persist": "^4.0.1",
-    "node-telegram-bot-api": "^0.65.1"
+    "node-telegram-bot-api": "^0.65.1",
+    "web3": "^1.10.0"
   },
   "engines": {
     "node": "20.11.1"
