--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-TG_API_KEY = 8094236716:AAHNfdJi2EEAiCZhhu8QW6cFrYBGD8UlaSw
+TG_API_KEY
 RPC_URL = "https://mainnet.helius-rpc.com/?api-key=a2d1c8a9-02fb-4f73-bfe2-b70429414138"
 INFURA_ID= 6772dc525b264734b1067330708e9d34
 ETH_INFURA_URL = https://mainnet.infura.io/v3/6772dc525b264734b1067330708e9d34
